k8s/base/monolith.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith-svc
  namespace: microservices
  labels: { app: monolith-svc }
spec:
  replicas: 1
  selector:
    matchLabels: { app: monolith-svc }
  template:
    metadata:
      labels: { app: monolith-svc }
    spec:
      containers:
        - name: monolith
          image: monolith-svc:ci
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:   { cpu: 200m, memory: 128Mi }
            requests: { cpu: 50m, memory: 64Mi }
          securityContext:
            runAsUser: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities: { drop: ["ALL"] }
            seccompProfile: { type: RuntimeDefault }

---
apiVersion: v1
kind: Service
metadata:
  name: monolith-svc
  namespace: microservices
  labels: { app: monolith-svc }
spec:
  type: NodePort
  selector: { app: monolith-svc }
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080 
      protocol: TCP
